added link to github

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
             <h3>Chess960 Generator | March 2025</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://jonathan-woodruff.github.io/960generator" target="_blank">Chess960 Generator</a> showcases what I can do in less than 8 hours of work. It uses Bootstrap for styling and vanilla JavaScript to randomly generate one of 960 possible starting configurations in chess960.</p>
+                <p><a href="https://jonathan-woodruff.github.io/960generator" target="_blank">Chess960 Generator</a> showcases what I can do in less than 8 hours of work. It uses Bootstrap for styling and vanilla JavaScript to randomly generate one of 960 possible starting configurations in chess960. <a href="https://github.com/jonathan-woodruff/960generator" target="_blank">View the code on Github</a>.</p>
             </div>
             <h3>Peace Chickens | October 2024</h3>
             <div class="video-skills-demonstrated">
