updated note about peace chickens functionality with free plans

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <h3>Peace Chickens | October 2024</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://wiki-client.onrender.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more. <b>Important note:</b> I am on the free plan for the server, so your first server call may take a minute to complete.</p>
+                <p><a href="https://wiki-client.onrender.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more. <b>IMPORTANT NOTE:</b> I am on the free plan for the server, and I am using a free URL which doesn't work nicely with Render (the deployment platform), so <b>functionality will appear to be broken</b>, but it would work properly and nicely if it is connected to a paid URL and to a paid server plan.</p>
             </div>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
