updated to peace hens

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
             <div class="video-skills-demonstrated">
                 <p><a href="https://jonathan-woodruff.github.io/960generator" target="_blank">Chess960 Generator</a> showcases what I can do in less than 8 hours of work. It uses Bootstrap for styling and vanilla JavaScript to randomly generate one of 960 possible starting configurations in chess960. <a href="https://github.com/jonathan-woodruff/960generator" target="_blank">View the code on Github</a>.</p>
             </div>
-            <h3>Peace Chickens | October 2024</h3>
+            <h3>Peace Hens | October 2024</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://wiki-client.onrender.com" target="_blank">Peace Chickens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more. <b>IMPORTANT NOTE:</b> I am on the free plan for the server, and I am using a free URL which doesn't work nicely with Render (the deployment platform), so <b>functionality will appear to be broken</b>, but it would work properly and nicely if it is connected to a paid URL and to a paid server plan.</p>
+                <p><a href="https://wiki-client.onrender.com" target="_blank">Peace Hens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more.
             </div>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
