updated peace hens url

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <h3>Peace Hens | October 2024</h3>
             <div class="video-skills-demonstrated">
-                <p><a href="https://wiki-client.onrender.com" target="_blank">Peace Hens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more.
+                <p><a href="https://peacehens.com" target="_blank">Peace Hens</a> is a full-stack, Webpack-bundled app developed using plain vanilla JavaScript, Bootstrap, Node, and MongoDB. It demonstrates comprehensive skills including user authentication, user input validation, user avatar/image storage, user email/password change functionality, API integration with Stripe, CRUD operations, error handling, recursive auto-saving, automatic email generation, and more.
             </div>
             <h3>Mean Kitty | August 2024</h3>
             <div class="video-skills-demonstrated">
