added ruby skill

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/mle-certification.pdf" target="_blank">Python</a></figcaption>
                 </figure>
                 <figure>
+                    <img src="./images/ruby_logo.jpeg" alt="Ruby logo">
+                    <figcaption><a href="https://www.codecademy.com/workspaces/693762e060ef020908e2f106" target="_blank">Ruby</a></figcaption>
+                </figure>
+                <figure>
                     <img src="./images/sql_logo.webp" alt="SQL logo">
                     <figcaption><a href="https://jonathan-woodruff.github.io/images/full-stack-certification.pdf" target="_blank">SQL</a></figcaption>
                 </figure>
