updated button text

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <li><span class="timeframe">Aug 2023 - Present</span><hr class="bullet-line"><span class="colon">: </span><strong>I became a <a href="./images/full-stack-certification.pdf" target="_blank">certified full-stack developer</a> and <a href="./images/mle-certification.pdf" target="_blank">certified machine learning engineer</a> via Codecademy</strong> while serving in remote South Africa as a Peace Corps volunteer.</li>
                 </ul>
             </div>
-            <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Tell me why I should work for you</button></a>
+            <a href="mailto: jonathanMwoodruff@gmail.com" class="email-link"><button>Tell me why we should work together</button></a>
         </section>
     </main>
     <footer>
